Opened 10 years ago

Closed 10 years ago

#5873 closed defect (fixed)

FFplay subtitle scaling regression

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: ffplay
Version: git-master Keywords: regression
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Ticket #679 is reproducible again after 9c5fab5e

$ ffplay subtitles.ts
ffplay version N-81838-g1a9b4bc Copyright (c) 2003-2016 the FFmpeg developers
  built with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      55. 32.100 / 55. 32.100
  libavcodec     57. 60.101 / 57. 60.101
  libavformat    57. 51.102 / 57. 51.102
  libavdevice    57.  0.102 / 57.  0.102
  libavfilter     6. 63.100 /  6. 63.100
  libswscale      4.  1.100 /  4.  1.100
  libswresample   2.  2.100 /  2.  2.100
  libpostproc    54.  0.100 / 54.  0.100
[mpeg2video @ 0x7fd3540279e0] Invalid frame dimensions 0x0. f=0/0
    Last message repeated 10 times
[mpegts @ 0x7fd354000920] start time for stream 2 is not set in estimate_timings_from_pts
[mpegts @ 0x7fd354000920] PES packet size mismatch
[mpegts @ 0x7fd354000920] Could not find codec parameters for stream 2 (Audio: mp3 ([4][0][0][0] / 0x0004), 0 channels): unspecified frame size
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x7fd354000920] Could not find codec parameters for stream 4 (Unknown: none ([11][0][0][0] / 0x000B)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x7fd354000920] Could not find codec parameters for stream 5 (Unknown: none ([11][0][0][0] / 0x000B)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x7fd354000920] Could not find codec parameters for stream 6 (Unknown: none ([11][0][0][0] / 0x000B)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x7fd354000920] Could not find codec parameters for stream 7 (Unknown: none ([11][0][0][0] / 0x000B)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, mpegts, from 'subtitles.ts':
  Duration: 00:00:09.21, start: 11318.457333, bitrate: 2223 kb/s
  Program 8270
    Metadata:
      service_name    : ITV1
      service_provider: ITV
  Program 8325
    Metadata:
      service_name    : ITV2
      service_provider: ITV
  Program 8634
    Metadata:
      service_name    : Rabbit
      service_provider: Teletext Limited
  Program 8384
    Metadata:
      service_name    : Channel 4
      service_provider: Channel 4 TV
  Program 8448
    Metadata:
      service_name    : E4
      service_provider: Channel 4 TV
  Program 8442
    Metadata:
      service_name    : More 4
      service_provider: Channel 4 TV
    Stream #0:0[0x24e]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv), 544x576 [SAR 32:17 DAR 16:9], 25 fps, 25 tbr, 90k tbn, 50 tbc
    Stream #0:1[0x24f](eng): Audio: mp2 ([4][0][0][0] / 0x0004), 48000 Hz, stereo, s16p, 192 kb/s
    Stream #0:2[0x250](eng): Audio: mp3 ([4][0][0][0] / 0x0004), 0 channels (visual impaired)
    Stream #0:3[0x251](eng): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)
    Stream #0:4[0x84f]: Unknown: none ([11][0][0][0] / 0x000B)
    Stream #0:5[0x911]: Unknown: none ([11][0][0][0] / 0x000B)
    Stream #0:6[0x912]: Unknown: none ([11][0][0][0] / 0x000B)
    Stream #0:7[0xbbb]: Unknown: none ([11][0][0][0] / 0x000B)
  Program 8452
    Metadata:
      service_name    : Channel 4+1
      service_provider: Channel 4 TV
  Program 8577
    Metadata:
      service_name    : Gay Rabbit
      service_provider: Teletext Limited
  Program 8500
    Metadata:
      service_name    : Channel 5
      service_provider: five
  Program 8370
    Metadata:
      service_name    : ITV1 +1
      service_provider: ITV
[mpegts @ 0x7fd354000920] PES packet size mismatch
11322.11 A-V: -0.014 fd=   0 aq=  122KB vq=  990KB sq=    0B f=0/0

Change History (1)

comment:1 by Marton Balint, 10 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.